# matrix-screensaver

./: Cargo.toml  LICENSE  README.md  matrix-screensaver.service
.github/workflows/: release.yml
docs/plans/: 2026-02-24-matrix-screensaver-design.md  2026-02-24-matrix-screensaver.md  2026-02-24-visual-effects-and-packaging-design.md  2026-02-24-visual-effects-and-packaging.md  2026-03-03-clock-design.md  2026-03-03-clock.md
pkg/aur/: PKGBUILD
pkg/deb/: matrix-screensaver.service
src/: config.rs  main.rs
src/idle/: dbus.rs  lock.rs  mod.rs  wayland.rs  x11.rs
src/render/: clock.rs  matrix.rs  mod.rs
