[package]
name = "matrix-screensaver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "matrix-screensaver"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
sdl2 = { version = "0.37" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["staging"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }
x11rb = { version = "0.13", features = ["screensaver"] }
rand = "0.8"
anyhow = "1"
async-trait = "0.1"
