[package]
name = "matrix-screensaver"
version = "0.1.0"
edition = "2021"
description = "Matrix-style falling character rain screensaver for Linux"
license = "MIT"

[[bin]]
name = "matrix-screensaver"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
sdl2 = { version = "0.37", features = ["ttf"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }
x11rb = { version = "0.13", features = ["screensaver"] }
rand = "0.8"
anyhow = "1"
async-trait = "0.1"
futures-util = "0.3"

[package.metadata.deb]
maintainer = "Lawrence Drew"
copyright = "2026, Lawrence Drew"
extended-description = "Matrix-style falling character rain screensaver for Linux. Supports X11 and Wayland."
depends = "$auto, fonts-noto-cjk"
section = "x11"
priority = "optional"
assets = [
    ["target/release/matrix-screensaver", "usr/bin/", "755"],
    ["matrix-screensaver.service", "usr/lib/systemd/user/", "644"],
    ["README.md", "usr/share/doc/matrix-screensaver/README.md", "644"],
]
